# openconnect-sso

./: pyproject.toml
openconnect_sso/: app.py  cli.py
