[tool.poetry]
name = "openconnect-sso"
version = "0.8.1"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = ["László Vaskó <laszlo.vasko@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/vlaci/openconnect-sso"
repository = "https://github.com/vlaci/openconnect-sso"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[tool.poetry.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.poetry.dependencies]
python = ">=3.10"
attrs = ">=25.1"
colorama = "^0.4"
lxml = "^5.3"
keyring = ">=25.6"
prompt-toolkit = "^3.0.50"
pyxdg = ">=0.26, <0.29"
requests = "^2.32"
structlog = ">=25.1"
toml = "^0.10"
setuptools = ">40.0"
PySocks = "^1.7.1"
PyQt6 = "^6.8.0"
PyQt6-WebEngine = "^6.8.0"
pyotp = "^2.9.0"

[tool.poetry.group.dev.dependencies]
coverage_enable_subprocess = "^1.0"
pytest = "^8.3"
black = "=24.10"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0"
pytest-httpserver = "^1.1"

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
